loveyacht/route-rule-nginx.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
    - nginx
  http:
  - route:
    - destination:
        host: nginx
        subset: v1
      weight: 10
  - route:
    - destination:
        host: nginx
        subset: v2
      weight: 90
